[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/character/Robot/PNG/Poses HD/character_robot_eye_closed.png" type="Texture" id=1]
[ext_resource path="res://assets/buttons/return.png" type="Texture" id=2]
[ext_resource path="res://end/EndScreen.gd" type="Script" id=3]
[ext_resource path="res://assets/buttons/exit.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/bold_game_font_7.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/medals/flatshadow_medal1.png" type="Texture" id=6]
[ext_resource path="res://assets/character/Robot/PNG/Poses HD/character_robot_cheer1.png" type="Texture" id=7]
[ext_resource path="res://assets/background/Fondo_Lose.jpg" type="Texture" id=8]
[ext_resource path="res://assets/background/Fondo_Win.jpg" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 100
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 40
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 30
use_filter = true
font_data = ExtResource( 5 )

[node name="EndScreen" type="Node"]
script = ExtResource( 3 )
medals = [ "res://assets/medals/flatshadow_medal1.png", "res://assets/medals/flat_medal9.png", "res://assets/medals/flatshadow_medal3.png", "res://assets/medals/flatshadow_medal2.png" ]
ranks = [ "S", "A", "B", "C" ]

[node name="GameOverScreen" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="GameOverScreen"]
layer = -1

[node name="Background" type="TextureRect" parent="GameOverScreen/CanvasLayer"]
margin_right = 1026.0
margin_bottom = 604.0
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="GameOverScreen"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -128.0
margin_bottom = 128.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverScreen/HBoxContainer"]
margin_left = 200.0
margin_right = 628.0
margin_bottom = 256.0

[node name="Title" type="Label" parent="GameOverScreen/HBoxContainer/VBoxContainer"]
margin_right = 428.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 1 )
text = "Game Over"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="GameOverScreen/HBoxContainer/VBoxContainer"]
margin_top = 104.0
margin_right = 428.0
margin_bottom = 210.0
alignment = 1

[node name="Restart" type="Button" parent="GameOverScreen/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 100.0
margin_right = 212.0
margin_bottom = 106.0
icon = ExtResource( 2 )
flat = true

[node name="Exit" type="Button" parent="GameOverScreen/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 216.0
margin_right = 328.0
margin_bottom = 106.0
icon = ExtResource( 4 )
flat = true

[node name="TextureRect" type="TextureRect" parent="GameOverScreen/HBoxContainer"]
margin_left = 632.0
margin_right = 824.0
margin_bottom = 256.0
texture = ExtResource( 1 )
stretch_mode = 4
flip_h = true

[node name="ScoreScreen" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="ScoreScreen"]
layer = -1

[node name="Background" type="TextureRect" parent="ScoreScreen/CanvasLayer"]
margin_right = 1024.0
margin_bottom = 601.0
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="ScoreScreen"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -128.0
margin_bottom = 128.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ScoreScreen/HBoxContainer"]
margin_left = 219.0
margin_right = 549.0
margin_bottom = 256.0

[node name="Title" type="Label" parent="ScoreScreen/HBoxContainer/VBoxContainer"]
margin_right = 330.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 1 )
text = "You Win!"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="ScoreScreen/HBoxContainer/VBoxContainer"]
margin_top = 104.0
margin_right = 330.0
margin_bottom = 144.0
custom_fonts/font = SubResource( 2 )
text = "Score: 1001"

[node name="HBoxContainer" type="HBoxContainer" parent="ScoreScreen/HBoxContainer/VBoxContainer"]
margin_top = 148.0
margin_right = 330.0
margin_bottom = 254.0
alignment = 1

[node name="Restart" type="Button" parent="ScoreScreen/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 51.0
margin_right = 163.0
margin_bottom = 106.0
icon = ExtResource( 2 )
flat = true

[node name="Exit" type="Button" parent="ScoreScreen/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 167.0
margin_right = 279.0
margin_bottom = 106.0
icon = ExtResource( 4 )
flat = true

[node name="Robot" type="TextureRect" parent="ScoreScreen/HBoxContainer"]
margin_left = 553.0
margin_right = 745.0
margin_bottom = 256.0
texture = ExtResource( 7 )
stretch_mode = 4
flip_h = true

[node name="VBoxContainer2" type="VBoxContainer" parent="ScoreScreen/HBoxContainer"]
margin_left = 749.0
margin_right = 805.0
margin_bottom = 256.0
custom_constants/separation = 10

[node name="Medal" type="TextureRect" parent="ScoreScreen/HBoxContainer/VBoxContainer2"]
margin_right = 56.0
margin_bottom = 75.0
texture = ExtResource( 6 )

[node name="Rank" type="Label" parent="ScoreScreen/HBoxContainer/VBoxContainer2"]
margin_top = 85.0
margin_right = 56.0
margin_bottom = 150.0
custom_fonts/font = SubResource( 3 )
text = "Rank
SS"
align = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = "EndBackground"

[connection signal="pressed" from="GameOverScreen/HBoxContainer/VBoxContainer/HBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="GameOverScreen/HBoxContainer/VBoxContainer/HBoxContainer/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="ScoreScreen/HBoxContainer/VBoxContainer/HBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="ScoreScreen/HBoxContainer/VBoxContainer/HBoxContainer/Exit" to="." method="_on_Exit_pressed"]
